Fixed left border of second column on mobile, removed WordPress guff

--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -74,10 +74,14 @@ $large				: 75em;
 	padding: 1em 0 2em 0;
 }
 
-// Add extra 1em padding to the left main column (OPTIMIZE LATER)
+// Add extra 1em padding to the left main column (not for small viewports)
 
-.content-2 {
-	padding-left: 1em;
+@media scren and (min-width: $medium) {
+
+	.content-2 {
+		padding-left: 1em;
+	}
+
 }
 
 .content-1 h2:first-of-type {
